<resources>
    <string name="app_name">Lardi Test Quest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="show_password">Показать пароль</string>
    <string name="log_in">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="forgot_password_message">Пароль отправлен вам на почту</string>
    <string name="sign_up_message">Для регистрации заполните форму</string>
    <string name="successful_log_in">Успешный вход</string>
    <string name="wrong_login">Неверный логин или пароль</string>
    <string name="empty_login">Поле Логин обязательно для заполнения</string>
    <string name="empty_password">Поле Пароль обязательно для заполнения</string>
    <string name="no_connection">Нет связи с Lardi-Trans</string>
</resources>
